feat: Implement student management module with dynamic table, progress steps, and related UI components and actions.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -254,4 +254,8 @@
   .textarea {
     @apply placeholder:text-muted-foreground/60! font-medium! md:text-base! text-sm! text-foreground! h-11! ring-offset-0! ring-0! focus-visible:ring-0! focus-visible:ring-offset-0! shadow-none! transition-all bg-transparent!;
   }
+
+  .select {
+    @apply h-11! rounded-lg! bg-transparent! border-primary-border!;
+  }
 }
